# Trajectory-Simplification-Algorithm

./: .gitignore  CMakeLists.txt  CMakePresets.json  D.tar  Dockerfile.tar  README.md  check.ipynb  compare.ipynb  compare_results.csv  plot copy.ipynb  results.csv  results_2.csv  results_3_models.csv  results_new_1.csv  results_new_notline.csv  results_new_with_fbqs.csv  results_tight_fred_error.csv
compare/: compare.cpp
compute/: Dockerfile  compare.py
compute1/: Dockerfile  compare.py
inc/: helper.hpp  point.hpp  sim.hpp
input/sim/: 14.txt  16.txt  18.txt  19.txt  2.txt  20.txt  21.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  45.txt  47.txt  49.txt  52.txt  53.txt  54.txt  55.txt  56.txt  58.txt  59.txt  63.txt  64.txt  65.txt  67.txt  (+12 more)
output/OPW/10/: 10.txt  100.txt  11.txt  12.txt  13.txt  14.txt  15.txt  17.txt  18.txt  2.txt  21.txt  23.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  34.txt  37.txt  38.txt  39.txt  42.txt  44.txt  48.txt  49.txt  5.txt  50.txt  51.txt  52.txt  53.txt  54.txt  55.txt  56.txt  58.txt  59.txt  61.txt  62.txt  69.txt  72.txt  (+17 more)
output/OPW/100/: 1.txt  100.txt  14.txt  16.txt  17.txt  19.txt  20.txt  23.txt  25.txt  29.txt  33.txt  35.txt  37.txt  39.txt  4.txt  41.txt  44.txt  5.txt  51.txt  52.txt  53.txt  54.txt  56.txt  58.txt  59.txt  62.txt  63.txt  66.txt  73.txt  75.txt  78.txt  81.txt  85.txt  87.txt  88.txt  9.txt  90.txt  91.txt  92.txt  93.txt  (+2 more)
output/OPW/1000/: 1.txt  10.txt  11.txt  12.txt  14.txt  15.txt  19.txt  21.txt  25.txt  26.txt  28.txt  29.txt  30.txt  32.txt  34.txt  36.txt  37.txt  39.txt  41.txt  42.txt  46.txt  49.txt  5.txt  (+28 more)
script/: clean_taxi.py
src/: compare.cpp  main.cpp  toy.cpp
(+1709 files in other folders)
